# spendlense-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_user_inbox_token.py  0003_receipts_external_message_id.py  0004_gmail_connections.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  budgets.py  expenses.py  health.py  inbound.py  insights.py  integrations_gmail.py  receipts.py
backend/app/core/: config.py  database.py  logging.py  pagination.py  redis.py  secret_box.py  security.py  storage.py  storage_keys.py
backend/app/models/: __init__.py  base.py  budget.py  category_correction.py  enums.py  expense.py  gmail_connection.py  line_item.py  receipt.py  user.py
backend/app/schemas/: auth.py  budget.py  expense.py  gmail_connection.py  health.py  inbound_email.py  insights.py  receipt.py
backend/app/services/: budget_service.py  categorisation.py  category_rules.py  expense_service.py  gmail_connection_service.py  gmail_oauth_service.py  gmail_pubsub_service.py  gmail_sync_service.py  image_preprocess.py  inbound_email_service.py  insights_service.py  llm_client.py  ocr.py  pdf_rasterise.py  receipt_parser.py  receipt_service.py  user_service.py  vision_ocr.py
backend/app/tasks/: __init__.py  categorise_receipt.py  celery_app.py  gmail_history_sync.py  ping.py  process_receipt.py
backend/tests/: conftest.py  test_anomaly_detection.py  test_auth.py  test_budgets.py  test_categorisation.py  test_categorise_receipt_task.py  test_category_rules.py  test_celery.py  test_expense_schemas.py  test_expense_service.py  test_expenses.py  test_gmail_oauth.py  test_gmail_pubsub.py  test_gmail_sync.py  test_health.py  test_inbound_email.py  test_insights_endpoints.py  test_insights_service.py  test_pagination.py  test_pdf_rasterise.py  test_process_receipt_task.py  test_receipt_parser.py  test_receipt_status_and_retry.py  test_receipts.py  test_secret_box.py  test_security.py  test_storage.py  test_storage_keys.py  test_vision_ocr.py
docs/: architecture.md  roadmap.md  schema.md
docs/adr/: 0000-template.md  0001-jwt-auth-over-sessions.md  0002-receipt-ingestion-channels.md  0003-expenses-api.md  0004-receipt-storage.md  0005-pipeline-architecture.md  0006-frontend-architecture.md  0007-insights-architecture.md  0008-inbound-email.md  0009-gmail-oauth-pubsub.md  README.md
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.test.ts  client.ts  expenses.test.tsx  expenses.ts  health.ts  insights.test.ts  insights.ts  integrations.ts  receipts.test.tsx  receipts.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx  ProtectedRoute.tsx  authStore.test.ts  authStore.ts  useAuth.ts
frontend/src/components/expenses/: ExpenseFilters.tsx  ExpenseFormDialog.tsx  ExpenseTable.tsx
frontend/src/components/insights/: AnomaliesCard.tsx  BudgetsCard.tsx  MonthlyBreakdownCard.tsx  TrendsCard.tsx
frontend/src/components/receipts/: GmailConnectionsCard.test.tsx  GmailConnectionsCard.tsx  GmailRedirectBanner.test.tsx  GmailRedirectBanner.tsx  InboxAddressCard.test.tsx  InboxAddressCard.tsx  ReceiptCard.tsx  ReceiptUploader.tsx  StatusBadge.test.tsx  StatusBadge.tsx
frontend/src/lib/: format.test.ts  format.ts  useDebounced.ts
frontend/src/pages/: ExpensesPage.test.tsx  ExpensesPage.tsx  HealthPage.tsx  InsightsPage.test.tsx  InsightsPage.tsx  LoginPage.test.tsx  LoginPage.tsx  ReceiptsPage.test.tsx  ReceiptsPage.tsx  RegisterPage.tsx  ShareTargetPage.test.tsx  ShareTargetPage.tsx
