[project]
name = "spendlens-backend"
version = "0.1.0"
description = "SpendLens backend API"
requires-python = ">=3.12"
# readme/license are documented at the repo root; referencing them from here
# would escape the project directory and setuptools (PEP 621) forbids that.

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic[email]>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<1.15",
  "redis[hiredis]>=5.2,<5.3",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  # Pin bcrypt <4.1: passlib 1.7.4 reads bcrypt.__about__.__version__ which
  # was removed in bcrypt 4.1. Unpinned, every hash call logs a warning and
  # some paths raise. Revisit when passlib 1.8 ships or we migrate off it.
  "bcrypt>=4.0,<4.1",
  "python-multipart>=0.0.17,<0.1",
  "structlog>=24.4,<25.0",
  "httpx>=0.27,<0.28",
  # S3-compatible object storage. aioboto3 is the async wrapper around
  # boto3 — same API surface as production S3, talks to MinIO locally.
  "aioboto3>=13.2,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.7,<0.8",
  "mypy>=1.13,<2.0",
  "types-passlib",
  "types-python-jose",
  "types-aioboto3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RET", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"alembic/versions/*" = ["E501", "N806"]
# Module-level singletons for the async DB engine, Redis client, and
# S3 session are intentional — they're initialised once per process
# (lazy, lock-guarded).
"app/core/database.py" = ["PLW0603"]
"app/core/redis.py" = ["PLW0603"]
"app/core/storage.py" = ["PLW0603"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
